concord_examples/tests/ui/part_placeholder_decl_removed.stderr
error: template parameter declarations are not supported in `part[...]`; use identifier or scoped refs (`vars.x`, `ep.y`, `secret.z`)
  --> tests/ui/part_placeholder_decl_removed.rs:10:32
   |
10 |             "q" = part["id:", {id: String}]
   |                                ^^
