concord_examples/tests/ui/part_placeholder_decl_removed.rs
use concord_macros::api;

api! {
    client UiPartPlaceholderRemoved {
        base https "example.com"
    }

    GET One(id: String) -> Json<()> {
        query {
            "q" = part["id:", {id: String}]
        }
    }
}

fn main() {}
